[MOD] Rutas fix

--- a/form.html
+++ b/form.html
@@ -31,10 +31,10 @@
         <nav>
             <ul id="listaNav"> <a href="#"
                     onclick="alert('Página en mantenimiento, no se puede logear en el sistema en estos momentos. \nSentimos las molestias.')">Login</a>
-                <li><a href="../docs/form.html">Registrarse</a></li>
+                <li><a href="./form.html">Registrarse</a></li>
             </ul>
 
-            <a href="../docs/noticias.html">Noticias</a>
+            <a href="./noticias.html">Noticias</a>
             <a href="https://www.reddit.com/r/StarWars/" target="_blank">Apuestas</a>
             <a href="https://starwars.fandom.com/es/wiki/Star_Wars" target="_blank">Wiki</a>
         </nav>
