--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="icon" type="image/png" href="../images/../images/icon.png" />
 
     <!-- ESTILOS GENERALES -->
-    <link rel="stylesheet" type="text/css" href="../css/styles.css">
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
 
     <!-- ESTILOS PÁGINA PRINCIPAL -->
-    <link rel="stylesheet" type="text/css" href="../css/principal.css">
+    <link rel="stylesheet" type="text/css" href="./css/principal.css">
 
     <title>El palacio de Jabba</title>
 </head>
@@ -29,10 +29,10 @@
 
         <nav>
             <ul id="listaNav"> <a href="#" onclick="alert('Página en mantenimiento, no se puede logear en el sistema en estos momentos. \nSentimos las molestias.')">Login</a>
-                <li><a href="../docs/form.html">Registrarse</a></li>
+                <li><a href="./form.html">Registrarse</a></li>
             </ul>
 
-            <a href="../docs/noticias.html">Noticias</a>
+            <a href="./noticias.html">Noticias</a>
             <a href="https://www.reddit.com/r/StarWars/" target="_blank">Apuestas</a>
             <a href="https://starwars.fandom.com/es/wiki/Star_Wars" target="_blank">Wiki</a>
         </nav>
