--- a/html/form.html
+++ b/html/form.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ICONO DE PÁGINA -->
-    <link rel="icon" type="image/png" href="../images/../images/icon.png" />
+    <link rel="icon" type="image/png" href="../images/icon.png" />
 
     <!-- ESTILOS GENERALES -->
     <link rel="stylesheet" type="text/css" href="../css/styles.css" />
