--- a/html/index.html
+++ b/html/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- ICONO DE PÁGINA -->
-    <link rel="icon" type="image/png" href="../images/../images/icon.png" />
+    <link rel="icon" type="image/png" href="../images/icon.png" />
 
     <!-- ESTILOS GENERALES -->
-    <link rel="stylesheet" type="text/css" href="./css/styles.css">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
 
     <!-- ESTILOS PÁGINA PRINCIPAL -->
-    <link rel="stylesheet" type="text/css" href="./css/principal.css">
+    <link rel="stylesheet" type="text/css" href="../css/principal.css">
 
     <title>El palacio de Jabba</title>
 </head>
